@@ -1606,6 +1606,7 @@ users.validate.adminDisable=You cannot disable your own account
 users.validate.badDelete=You cannot delete your own account
 users.validate.cannotChangePermissions=Only admin users can modify permissions
 users.validate.cannotLockOwnPassword=You cannot lock your own password
+users.validate.cannotUseSamePasswordTwice=You cannot use the same password twice in a row
 users.receiveAlarmEmails=Send alarm emails
 users.receiveOwnAuditEvents=Receive own audit events
 users.deleteConfirm=Are you sure you wish to delete this user?
